--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rocket = "0.5.1"
-serde = "1.0.188"
+serde = { version = "1.0.188", features = ["derive"] }
 futures = "0.3.28"
 tokio = { version = "1.32.0", features = ["full"] }
+
+[dependencies.rocket]
+version = "0.5.1"
+features = ["json"]
 
 [dependencies.mongodb]
 version = "2.8.2"
