--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 serde = { version = "1.0.188", features = ["derive"] }
 futures = "0.3.28"
 tokio = { version = "1.32.0", features = ["full"] }
+ws = { package = "rocket_ws", version = "0.1.0" }
 
 [dependencies.rocket]
 version = "0.5.1"
