Web sockets to send additional messages

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ serde = { version = "1.0.188", features = ["derive"] }
 futures = "0.3.28"
 tokio = { version = "1.32.0", features = ["full"] }
 ws = { package = "rocket_ws", version = "0.1.0" }
+serde_json = { version = "1.0.120" }
 
 [dependencies.rocket]
 version = "0.5.1"
